--- a/app/css/style.styl
+++ b/app/css/style.styl
@@ -101,6 +101,22 @@ $wizardWidth = 868px
 .userForm
   &__backbtn
     margin 0 0 0 3px
+  &__searchUser
+    position relative
+    width 100%
+    &__autocomplete
+      position absolute
+      width 100%
+      border 1px solid #aaa
+      z-index 1
+      &__item
+        width 100%
+        padding 2px 15px
+        background-color #eee
+        cursor pointer
+        &:hover
+          background-color #1a0dab
+          color #fff
   &__form
     display inline-block
     vertical-align top
