--- a/app/css/style.styl
+++ b/app/css/style.styl
@@ -63,7 +63,7 @@
     transform scaleX(-1) rotate(-45deg)
     font-size 16px
     font-weight bold
-.modal
+#workspace_manager .modal
   display block
 $wizardWidth = 868px
 .wizard
