--- a/app/css/style.styl
+++ b/app/css/style.styl
@@ -111,25 +111,25 @@ $wizardWidth = 868px
   &__searchUser
     position relative
     width 100%
-    &__autocomplete
-      position absolute
-      width 100%
-      border 1px solid #aaa
-      z-index 1
-      &__item
-        width 100%
-        padding 2px 15px
-        background-color #eee
-        cursor pointer
-        &:hover
-          background-color #1a0dab
-          color #fff
   &__item
     .customCheckbox
       & > input:before
         top 5px
       &.checked > input:after
         top -12px
+.generic-autocomplete
+  position absolute
+  width 100%
+  border 1px solid #aaa
+  z-index 1
+  &__item
+    width 100%
+    padding 2px 15px
+    background-color #eee
+    cursor pointer
+    &:hover
+      background-color #1a0dab
+      color #fff
 $borderStyle = 1px solid #ccc
 $btnRemoveGeneric
   position absolute
