removed timezone from redux and added it to UserForm local state

--- a/app/css/style.styl
+++ b/app/css/style.styl
@@ -119,7 +119,7 @@ $wizardWidth = 868px
         top -12px
 .generic-autocomplete
   position absolute
-  width 100%
+  width calc(100% - 30px)
   border 1px solid #aaa
   z-index 1
   &__item
