[closes #14] make design of validate btn dynamic

--- a/app/css/style.styl
+++ b/app/css/style.styl
@@ -189,10 +189,14 @@ $btnRemoveGeneric
     text-decoration underline
   &__nextbtn__btn
     padding 5px 20px
-    font-size 20px
+    font-size 14px
     i
-      transition transform 0.3s
-      transition-timing-function linear
+      vertical-align bottom
+      font-size 20px
+      margin-right 10px
+      &.fa-gear
+        transition transform 0.3s
+        transition-timing-function linear
     &:hover > i
       transform rotate(100deg)
   &__data
