--- a/app/css/style.styl
+++ b/app/css/style.styl
@@ -6,66 +6,6 @@
 .form-group
   margin-bottom 0px
   padding-bottom 15px
-.customRadio
-  width 100%
-  margin 0
-  line-height 35px
-  cursor pointer
-  & > input
-    width 0px
-    height 0px
-    &:before
-      content ''
-      display block
-      position relative
-      top -13px
-      left -8px
-      width 16px
-      height 16px
-      border-radius 16px
-      border 1px solid #aaa
-      cursor pointer
-  &.checked > input:after
-    content ''
-    display block
-    position relative
-    top -26px
-    left -5px
-    width 10px
-    height 10px
-    border-radius 10px
-    background-color green
-.customCheckbox
-  width 100%
-  margin 0
-  line-height 35px
-  cursor pointer
-  & > input
-    width 0px
-    height 0px
-    &:before
-      content ''
-      display block
-      position relative
-      top -13px
-      left -8px
-      width 16px
-      height 16px
-      border-radius 2px
-      border 1px solid #aaa
-      cursor pointer
-  &.checked > input:after
-    content 'L'
-    display block
-    position relative
-    top -30px
-    left -2px
-    width 10px
-    height 10px
-    color green
-    transform scaleX(-1) rotate(-45deg)
-    font-size 16px
-    font-weight bold
 #workspace_manager .modal
   display block
 $wizardWidth = 868px
@@ -77,7 +17,6 @@ $wizardWidth = 868px
     left 0
     width ($wizardWidth * 3) + 30px // 30px for the right elevator which is hidden
     min-height 170px
-    max-height 400px
     overflow-x hidden
     overflow-y scroll
     transition left 1s
@@ -97,7 +36,6 @@ $wizardWidth = 868px
         text-decoration underline
   &__wrapper-hidden
     overflow hidden
-    // transition height 0.3s
     &__picto
       width 25px
       margin-top 5px
@@ -134,56 +72,73 @@ $wizardWidth = 868px
     &:hover
       background-color #1a0dab
       color #fff
-$borderStyle = 1px solid #ccc
-$btnRemoveGeneric
-  position absolute
-  top 50%
-  transform translateY(-50%)
-  left 30px
-  width 24px
-  height 24px
+
+.reader
+  color #1fdb11
+.contributor
+  color #759ac5
+.content_manager
+  color #ea983d
+.workspace_manager
+  color #f00
 .roleForm
+  max-height 290px
+  padding 15px
+  overflow-y auto
   &__backbtn
     @extends .userForm__backbtn
     margin-bottom 15px
-  &__tab
-    margin 0 auto
-    text-align center
-    &__removeuser
-      @extends $btnRemoveGeneric
-      border 1px solid #ccc
-      border-radius 14px
-      color red
-      font-weight bold
-      text-align center
-      cursor pointer
-      transition left 0.15s
-      &__wrapper
-        @extends $btnRemoveGeneric
-        left -30px
-        width 30px
-        overflow hidden
+  &__list
+    width 100%
     th, td
-      border-left $borderStyle
-      border-right $borderStyle
-      vertical-align middle
+      border-bottom 1px solid #ddd
     th
       max-width 170px
       padding 8px
-      text-align center
-      &:nth-child(1)
-        border-top 1px solid #fff
-        border-left 1px solid #fff
-    td:nth-child(1)
-      position relative
-      max-width 160px
-      padding 5px 8px
-    tr
-      border-top $borderStyle
-      border-bottom $borderStyle
+      border-width 2px
+    td
+      padding 5px 10px
+    &__role // classes bellow matchs ids of const ROLE_LISt (helper.js)
+      &__selector
+        position relative
+        padding 5px 0px
+        &__current
+          display inline
+          cursor pointer
+          i
+            margin-right 5px
+        &__list
+          display none
+          position absolute
+          top 25px
+          padding-left 0
+          border 1px solid #ddd
+          border-radius 5px
+          background-color #fff
+          list-style none
+          z-index 1
+          & > li
+            padding 4px 5px 4px 15px
+            cursor pointer
+            &:hover
+              background-color #ccc
+          &.visible
+            display block
+    &__notif
+      &__label
+        font-weight normal
+        cursor pointer
+        &__subscribed
+          color #428BCA
+        &__not-subscribed
+          color #ccc
+      &__checkbox
+        display none
+    &__delete button
+      color #999
+      font-size 17px
       &:hover
-        .roleForm__tab__removeuser
-          left 0px
+        color red
 .recap
   &__title
     font-size 16px
