--- a/app/css/style.styl
+++ b/app/css/style.styl
@@ -49,6 +49,9 @@ $wizardWidth = 868px
     margin 15px 3px 0 0
     & i
       margin-right 5px
+.workspaceForm__item textarea {
+  resize none
+}
 .userForm
   &__searchUser
     position relative
